Fix alignment between result count and letters

--- a/app/assets/stylesheets/views/travel-advice.scss
+++ b/app/assets/stylesheets/views/travel-advice.scss
@@ -356,7 +356,7 @@
     h2 {
       @include core-80;
       font-weight: 700;
-      margin-top: 0.5em;
+      margin-top: 0.4em;
       padding-top: 0;
       margin-bottom: 0; 
     }
